--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="./pages/media1/media1.html">Média 1</a>
             </li>
             <li>
-                <a href="./pages/salario_bonus/salario_bonus.html"></a>
+                <a href="./pages/salario_bonus/salario_bonus.html">Salário Bônus</a>
             </li>
         </ul>
     </nav>
