resolução do exercício 1011 - Esfera com ARROW FUNCTION

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="./pages/salario_bonus/salario_bonus.html">Salário Bônus</a>
             </li>
+            <li>
+                <a href="./pages/esfera/esfera.html">Esfera</a>
+            </li>
         </ul>
     </nav>
 </body>
